--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -159,6 +161,8 @@
             </div>
         </div>
     </footer>
+
+
 </body>
 
 </html>
